blog-demo/ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-srv
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - pathType: Prefix
        path: /posts/create
        backend:
          service:
            name: blog-posts-clusterip-service
            port: 
              number: 4000
      - pathType: Prefix
        path: /posts/?(.*)/comments
        backend:
          service:
            name: blog-comments-clusterip-service
            port: 
              number: 5000
      - pathType: Prefix
        path: /posts
        backend:
          service:
            name: blog-query-clusterip-service
            port: 
              number: 4002
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: blog-client-clusterip-service
            port: 
              number: 3000

  # - host: comments.com
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/posts"
  #       backend:
  #         service:
  #           name: blog-posts-clusterip-service
  #           port: 
  #             number: 4000
